--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Pasta</h1>
+
     <a href="../index.html">Home</a>
+    <img src="../images/dog.jpg" alt="">
+    <p>A dish that is pasta and tasty</p>
+    <ul>
+        <li>Milk</li>
+        <li>Paste</li>
+    </ul>
 </body>
 </html>
